tests/ui/generic-const-items/trivially-unsatisfied-bounds.unmentioned.stderr
error[E0080]: entering unreachable code
  --> $DIR/trivially-unsatisfied-bounds.rs:17:1
   |
LL | / const UNUSABLE: () = ()
LL | | where
LL | |     for<'_delay> String: Copy;
   | |______________________________^ evaluation of `UNUSABLE` failed here

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0080`.
